<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:background="@drawable/bordered_box">

    <TextView
        android:id="@+id/personal_reservation_box_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_reservation_box_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/personal_reservation_box_sport_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:paddingEnd="5dp"
            android:src="@drawable/football_ball" />

        <TextView
            android:id="@+id/personal_reservation_box_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.5dp"
            android:text="@string/sport_football"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/personal_reservation_box_duration_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:paddingEnd="5dp"
            android:src="@drawable/time_duration"
            app:tint="@color/primary"/>

        <TextView
            android:id="@+id/personal_reservation_box_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.5dp"
            android:text="@string/reservation_box_duration"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/personal_reservation_box_playground_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:paddingEnd="5dp"
            android:src="@drawable/court_generic_icon"
            app:tint="@color/primary"/>

        <TextView
            android:id="@+id/personal_reservation_box_playground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.5dp"
            android:text="@string/reservation_box_playground_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
</LinearLayout>