<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reservationImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:src="@drawable/football_pitch"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/secondaryVariant" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/playgroundName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-5dp"
                    android:text="@string/playground_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/secondary_text_light" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:numStars="5"
                    android:rating="3.5"
                    app:mrb_progressTint="@color/secondaryVariant" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/sportNameIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="5dp"
                        android:src="@drawable/football_ball" />

                    <TextView
                        android:id="@+id/sportName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/sport_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/secondary_text_light"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time_calendar"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/timeInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/date"
                        android:textColor="@android:color/secondary_text_light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time_duration"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/durationInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/duration"
                        android:textColor="@android:color/secondary_text_light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_icon"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/addressInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/address_playground"
                        android:textColor="@android:color/secondary_text_light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/account_circle"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/reservationCreator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/created_by"
                        android:textColor="@android:color/secondary_text_light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/priceIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="5dp"
                        android:src="@drawable/price_icon"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:paddingBottom="10dp"
                        android:text="@string/price_string"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/secondary_text_light"
                        android:textStyle="italic" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rentingEquipmentIconTrue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/check_icon"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <ImageView
                        android:id="@+id/rentingEquipmentIconFalse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cross_circle_icon"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        app:tint="@color/primary" />

                    <TextView
                        android:id="@+id/rentingEquipment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/renting_equipment"
                        android:textColor="@android:color/secondary_text_light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/invited_for_this_reservation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primaryVariant"
                    android:textStyle="bold" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/listOfInvitations"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/invite_friends_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/invite_friends" />
                <Button
                    android:id="@+id/revoke_partecipation_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cancel_participation" />

                <Button
                    android:id="@+id/btnRateCourt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/rate_court" />

                <LinearLayout
                    android:id="@+id/myReviewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_box"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_review_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="12dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:id="@+id/myReviewScore"
                            style="@style/Widget.MaterialRatingBar.RatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:numStars="5"
                            android:rating="3.5"
                            app:mrb_progressTint="@color/secondaryVariant" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/myReviewDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/optional_description_entered"
                        android:gravity="center"
                        android:padding="12dp"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/loadingShowReservationFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>